--- a/index.html
+++ b/index.html
@@ -4,41 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Nanum+Myeongjo&family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
     <title>W. Notícias</title>
 </head>
 <body>
-    <header class = "header-mobile"> 
+    <header class="header-mobile"> 
         <img src="./assets/images/logo.svg" alt="Logo do site notícias W.">
 
         <button>
             <img src="./assets/images/icon-menu.svg" alt="ícone do menu hambúrguer">
-
         </button>
     </header>
 
     <main>
-        <section class ="primeira secao">
+        <section class="primeira-secao">
             <img src="./assets/images/image-web-3-mobile.jpg" alt="ícone do puzzel colorido">
 
             <h1>O futuro bilhante da web 3.0?</h1>
             <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
+
             <button>Ler Mais</button>
         </section>
         
-        <section>
+        <section class="segunda-secao">
             <h2>Novo</h2>
             
-            <div>
+            <div class="margin-border-padding">
                 <h3>Hidrogênio VS Carros Elétricos</h3>
                 <p>Os carros movidos a hidrogênio alguma vez alcançarão os veículos elétricos?
                 </p>
             </div>
-            <div>
+            <div class="margin-border-padding">
                 <h3>A arte gerada por IA</h3>
                 <p>Quais são os possíveis efeitos adversos da geração de imagens por IA sob demanda?</p>
             </div>
