--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <title>W. Notícias</title>
 </head>
-<body>
+<body class="menu-open">
     <header class="header-mobile"> 
         <img src="./assets/images/logo.svg" alt="Logo do site notícias W.">
 
@@ -21,6 +21,10 @@
         </button>
 
         <nav>
+
+            <button>
+                <img src="./assets/images/icon-menu-close.svg" alt="íconede x para fechar o menu">
+            </button>
             <a href="#">Home</a>
             <a href="#">Novo</a>
             <a href="#">Popular</a>
