--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +13,7 @@
 
     <title>W. Notícias</title>
 </head>
-<body class="menu-open">
+<body>
     <header class="header-mobile"> 
         <img src="./assets/images/logo.svg" alt="Logo do site notícias W.">
 
